# ros1

./: .gitignore  .gitmodules  octave-workspace  readme.md
src/: 局部控制器最小代码模板.tar.xz
src/follow_wall_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
src/follow_wall_local_planner/cfg/: FollowWallPlanner.cfg
src/follow_wall_local_planner/include/follow_wall_local_planner/: follow_wall_local_planner.h
src/follow_wall_local_planner/include/follow_wall_local_planner/state/: arc_to_wall_state.h  data_manager.h  follow_wall_state.h  rotate_to_wall_state.h  state_base_class.h  state_machine.h
src/follow_wall_local_planner/src/: follow_wall_local_planner.cpp
src/follow_wall_local_planner/src/state/: arc_to_wall_state.cpp  data_manager.cpp  follow_wall_state.cpp  rotate_to_wall_state.cpp  state_base_class.cpp  state_machine.cpp
src/hybrid_astar_planner/: CMakeLists.txt  bgp_plugin.xml  footprint_collision_checker.cpp  footprint_collision_checker.h  line_iterator.h  package.xml  utils.h
src/hybrid_astar_planner/include/hybrid_astar_planner/: a_star.h  analytic_expansion.h  collision_checker.h  constants.h  costmap_downsampler.h  node_basic.h  node_hybrid.h  smac_planner_hybrid.h  types.h
src/hybrid_astar_planner/include/hybrid_astar_planner/curve/: dubins.h  reed_shepp.h  state_space.h
src/hybrid_astar_planner/src/: a_star.cpp  analytic_expansion.cpp  collision_checker.cpp  costmap_downsampler.cpp  node_basic.cpp  node_hybrid.cpp  smac_planner_hybrid.cpp
src/hybrid_astar_planner/src/curve/: dubins.cpp  reed_shepp.cpp
src/kinematic_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
src/kinematic_planner/include/kinematic_planner/: collision_checker.h  dubins.h  kinematic_planner.h  kinematic_planner_core.h
src/kinematic_planner/src/: collision_checker.cpp  dubins.cpp  kinematic_planner.cpp  kinematic_planner_core.cpp
src/navigation/base_local_planner/src/: local_planner_util.cpp
src/navigation/costmap_2d/include/costmap_2d/: costmap_2d.h  costmap_2d_ros.h
src/navigation/costmap_2d/plugins/: obstacle_layer.cpp
src/navigation/costmap_2d/src/: costmap_2d.cpp
src/navigation/fake_localization/: fake_localization.cpp
src/navigation/move_base/: CMakeLists.txt
src/navigation/move_base/cfg/: MoveBase.cfg
src/navigation/move_base/include/move_base/: move_base.h  visualization.h
src/navigation/move_base/src/: move_base.cpp  visualization.cpp
src/navigation/nav_core/include/nav_core/: base_global_planner.h
src/navigation_tutorials/navigation_stage/: single_robot.rviz
src/navigation_tutorials/navigation_stage/launch/: test_move_base_fake_localization_5cm.launch
src/navigation_tutorials/navigation_stage/move_base_config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml
src/navigation_tutorials/navigation_stage/stage_config/maps/: autolab.yaml  hospital_section.yaml  mbicp.yaml  rink.yaml  small_1cm.yaml  table.yaml  webots_1cm.yaml  webots_5cm.yaml  webots_floor1(复件).yaml  webots_floor1.yaml  willow-full-0.05.yaml
src/navigation_tutorials/navigation_stage/stage_config/worlds/: willow-pr2-5cm.world
src/regulated_pure_pursuit_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
src/regulated_pure_pursuit_local_planner/cfg/: RPPPlanner.cfg
src/regulated_pure_pursuit_local_planner/include/rpp_local_planner/: rpp_planner.h
src/regulated_pure_pursuit_local_planner/src/: rpp_planner.cpp
src/spline_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
src/spline_planner/include/spline_planner/: arc.h  cubic_bezier.h  cubic_polynomial.h  cubic_spline.h  dubins.h  dubins.h(ompl)  line_iterator.h  quadratic_bezier.h  quartic_polynomial.h  quintic_bezier.h  quintic_polynomial.h  reed_shepp.h  rounded.h  spline_planner.h
src/spline_planner/src/: arc.cpp  cubic_bezier.cpp  cubic_polynomial.cpp  cubic_spline.cpp  dubins.cpp  dubins.cpp(ompl)  line_iterator.cpp  quadratic_bezier.cpp  quartic_polynomial.cpp  quintic_bezier.cpp  quintic_polynomial.cpp  reed_shepp.cpp  rounded.cpp  spline_planner.cpp
